End of section 3 #2 + secrets

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ BenchmarkDotNet.Artifacts/
 # .NET Core
 project.lock.json
 project.fragment.lock.json
+appsettings.json
 artifacts/
 
 # StyleCop
@@ -348,3 +349,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+.vscode
+bin
+obj
